--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
+@import 
+    'functions',
+    'variables',
+    'mixins',
+    // 'print',
+    'reboot',
+    'type',
+    'images',
+    // 'code',
+    'grid',
+    'tables',
+    'forms',
+    'buttons',
+    'transitions',
+    'dropdown',
+    'button-group',
+    'input-group',
+    'custom-forms',
+    'nav',
+    'navbar',
+    'card',
+    // 'breadcrumb',
+    'pagination',
+    'badge',
+    'jumbotron',
+    'alert',
+    'progress',
+    // 'media',
+    'list-group',
+    'close',
+    'modal',
+    // 'tooltip',
+    // 'popover',
+    // 'carousel',
+    'utilities';
