--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
           <div id="accordion">
             <div class="card">
                 <h4 style="margin-bottom: 10px">
-                  <a href="" class="btn-link"  data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Proyectos</a>
+                  <a href="#" class="btn-link"  data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Proyectos</a>
                 </h4>
                 <hr style="margin-top: -10px; background-color: whitesmoke;">
               <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
@@ -18,7 +18,7 @@
             </div>
             <div class="card">
                 <h4 style="margin-bottom: 10px">
-                  <a href="" class="btn-link"  data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Equipos</a>
+                  <a href="#" class="btn-link"  data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Equipos</a>
                 </h4>
                 <hr style="margin-top: -10px; background-color: whitesmoke;">
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
@@ -76,7 +76,4 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium libero quos vel reiciendis cupiditate. Eveniet, molestias distinctio quis sed sit sunt harum dolore cum voluptatem rerum laboriosam quibusdam perferendis in.</p>
       </div>
     </div>
-
   </div>
-
-
