--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+$primary: #73A626;
+$secondary: #BFD962;
+$dark: #0F2026;
+$light: #D9D0C1;
+
+$idk: #8C8474;
+
 @import 
     'functions',
     'variables',
