--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex" id="wrapper">
     <div class="sidebar-cont" id="sidebar-wrapper">
-      <div class="sidebar-heading" style="padding-left: 60px; margin-bottom: 25px">
+      <div class="sidebar-heading">
         <img src="http://chittagongit.com/download/111939" height="100px">
       </div>
       <div class="list-group list-group-flush">
@@ -71,9 +71,7 @@
       </nav>
 
       <div class="container-fluid">
-        <h1 class="mt-4">Contenido</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, numquam nam vitae obcaecati consectetur debitis illo, at accusantium voluptate est veritatis quisquam nostrum sit modi, cupiditate minima explicabo quibusdam quo?</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium libero quos vel reiciendis cupiditate. Eveniet, molestias distinctio quis sed sit sunt harum dolore cum voluptatem rerum laboriosam quibusdam perferendis in.</p>
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
