--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -14,11 +14,19 @@ body {
 
 .sidebar-cont, nav{
     background-color: $dark;
+    p{
+        color: $light;
+        padding-left: 15px;
+    }
+    #collapse{
+        margin: -35px 0 25px;
+        padding-left: 15px;
+    }
 }
 
-.sidebar-heading {
-    padding-left: 60px;
-    margin-bottom: 25px;
+#hey{ 
+    margin-left: 45px;
+    margin-bottom: 30px;
 }
 
 .card{
@@ -65,6 +73,14 @@ body {
 
 #wrapper.toggled #sidebar-wrapper {
     margin-left: 0;
+}
+
+.navbar-nav li:hover{
+    border-radius: 10px;
+    background-color: $light;
+    .nav-link{
+        color: $dark;
+    }
 }
 
 @media (min-width: 768px) {
