--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
+$primary: #319795;
+$secondary: #3182CE;
+$green: #38A169;
+
 /* You can add global styles to this file, and also import other style files */
-@import 
+@import
     'functions',
     'variables',
     'mixins',
