--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -7,38 +7,19 @@ body {
 .toggle-btn span{
     width: 45px;
     height: 4px;
-    background-color: $light;
+    background-color: $primary;
     display: block;
     margin-top: 4px;
 }
 
-.sidebar-cont, nav{
-    background-color: $dark;
+.sidebar-cont {
+    background-color: $light;
+    z-index: 200;
 }
 
 .sidebar-heading {
     padding-left: 60px;
     margin-bottom: 25px;
-}
-
-.card{
-    background-color: #0F2026;
-    color: rgba(255, 255, 255, 0.767);
-    border-style: none;
-    padding: 10px 20px;
-    .btn-link{
-        color: $light;
-        text-decoration: none;
-        font-size: 20px; 
-    }
-}
-
-.card-body{
-    padding: 0px 20px
-}
-
-.nav-link{
-    color: $light;
 }
 
 #sidebar-wrapper {
@@ -56,7 +37,7 @@ body {
 }
 
 #sidebar-wrapper .list-group {
-    width: 15rem;   
+    width: 15rem;
 }
 
 #page-content-wrapper {
@@ -80,4 +61,27 @@ body {
     #wrapper.toggled #sidebar-wrapper {
         margin-left: -15rem;
     }
+}
+
+.btn {
+  z-index: 100;
+  margin-bottom: 15px;
+}
+
+.list-container {
+  background-color: white;
+  margin-top: -5px;
+  list-style: none;
+  padding: 0;
+  border-radius: 3px;
+
+  li {
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 10px;
+
+    &:hover {
+      background-color: $light;
+    }
+  }
 }
