--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,14 +1,21 @@
 <div class="d-flex" id="wrapper">
+  <!-- Sidenav -->
   <div class="sidebar-cont shadow-sm" id="sidebar-wrapper">
     <div class="sidebar-heading text-center">
       <img src="http://chittagongit.com/download/111939" height="100px">
     </div>
     <div class="list-group list-group-flush">
+      <button class="btn btn-outline-primary btn-sm mx-2 shadow-sm">
+        <i class="fas fa-tasks"></i>
+        Tasks
+      </button>
+      <!-- Projects -->
       <button
         class="btn btn-primary btn-sm mx-2 shadow-sm"
         (click)="isCollapsed1 = !isCollapsed1"
         [attr.aria-expanded]="!isCollapsed1"
         aria-controls="collapse1">
+        <i class="fas fa-thumbtack"></i>
         Proyectos
       </button>
       <div
@@ -21,8 +28,10 @@
           <li>Proyecto ExpoKinal 2019</li>
         </ul>
       </div>
+      <!-- Teams -->
       <button class="btn btn-secondary btn-sm mx-2 shadow-sm" (click)="isCollapsed2 = !isCollapsed2"
         [attr.aria-expanded]="!isCollapsed2" aria-controls="collapse2">
+        <i class="fas fa-users"></i>
         Equipos
       </button>
       <div id="collapse" class="list-items" [ngbCollapse]="isCollapsed2">
