--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <!-- Sidenav -->
   <div class="sidebar-cont shadow-sm" id="sidebar-wrapper">
     <div class="sidebar-heading text-center">
-      <img src="http://chittagongit.com/download/111939" height="100px">
+      <img src="assets/logo.png" height="100px">
     </div>
     <div class="list-group list-group-flush">
       <button class="btn btn-outline-primary btn-sm mx-2 shadow-sm">
