Tag and task component updated

--- a/src/app/components/create-task/create-task.component.html
+++ b/src/app/components/create-task/create-task.component.html
@@ -1,3 +1,41 @@
-<p>
-  create-task works!
-</p>
+<section class="comp">
+<input type="text" class="ingresart" placeholder="nombre de la tarea">
+<div class="row"></div>
+<div class="row">
+  <div class="md-chips">
+    <div class="md-chip md-chip-hover">
+      <div class="md-chip-icon">EA</div>
+      Asignado a: 
+    </div>
+  </div>
+  <div class="md-chips">
+    <div class="md-chip md-chip-hover">
+      <div class="md-chip-icon" >FH</div>
+      Fecha
+    </div>
+  </div>
+</div>
+<div class="input-group">
+  <div class="input-group-prepend">
+    <span class="input-group-text">Descripción</span>
+  </div>
+  <textarea class="form-control" aria-label="With textarea"></textarea>
+</div>
+    <div class="etiqueta">
+        <div class="row">
+            <div class="column">
+          <h4 class="title">Agregar etiqueta</h4>
+          </div>
+          <div class="column"><button type="button" class="btn btn-sec btn-circle"><img src="https://img.icons8.com/material/24/000000/edit.png"></button></div>
+          
+          </div>
+          <div class="column"><input type="text" class="texto"></div>
+        </div>
+        <br>
+        <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text">Comentarios</span>
+            </div>
+            <textarea class="form-control" aria-label="With textarea"></textarea>
+          </div>
+</section>
