--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -31,9 +31,7 @@
           </div>
       </div>
     </div>
-
     <div id="page-content-wrapper">
-
       <nav class="navbar navbar-expand-lg border-bottom">
         <div class="toggle-btn" style="margin-top: 7px;" onclick="show()">
           <span style="margin-top: 10px;"></span>
@@ -69,14 +67,10 @@
           </ul>
         </div>
       </nav>
-
       <div class="container-fluid">
-        <h1 class="mt-4">Contenido</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, numquam nam vitae obcaecati consectetur debitis illo, at accusantium voluptate est veritatis quisquam nostrum sit modi, cupiditate minima explicabo quibusdam quo?</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium libero quos vel reiciendis cupiditate. Eveniet, molestias distinctio quis sed sit sunt harum dolore cum voluptatem rerum laboriosam quibusdam perferendis in.</p>
-      </div>
+        <h1 class="mt-4"></h1>
+       </div>
     </div>
-
   </div>
 
 
