Actualizar el logo.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,12 +2,16 @@
   <!-- Sidenav -->
   <div class="sidebar-cont shadow-sm" id="sidebar-wrapper">
     <div class="sidebar-heading text-center">
-      <img src="assets/logo.png" height="100px">
+      <img src="assets/logo.jpg" height="100px">
     </div>
     <div class="list-group list-group-flush">
       <button class="btn btn-outline-primary btn-sm mx-2 shadow-sm">
+        <i class="fas fa-plus"></i>
+        Crear nueva tarea
+      </button>
+      <button class="btn btn-outline-primary btn-sm mx-2 shadow-sm">
         <i class="fas fa-tasks"></i>
-        Tasks
+        Tareas
       </button>
       <!-- Projects -->
       <button
