Dual component fixed in url

--- a/src/app/components/create-task/create-task.component.html
+++ b/src/app/components/create-task/create-task.component.html
@@ -1,6 +1,5 @@
 <section class="comp">
 <input type="text" class="ingresart" placeholder="nombre de la tarea">
-<div class="row"></div>
 <div class="row">
   <div class="md-chips">
     <div class="md-chip md-chip-hover">
@@ -38,4 +37,8 @@
             </div>
             <textarea class="form-control" aria-label="With textarea"></textarea>
           </div>
+          <br>
+          <button id="save" alt="Save" title="Save" onclick="saveButton(this)">Save</button>
+
 </section>
+
