--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -84,7 +84,7 @@
     </nav>
     <!-- Outlet -->
     <div class="container-fluid">
-
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
