--- a/src/app/components/create-task/create-task.component.html
+++ b/src/app/components/create-task/create-task.component.html
@@ -1,8 +1,8 @@
-<section class="container shadow">
-  <form>
+<section class="container">
+  <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="title" class="font-weight-bold text-primary">Titulo de la tarea</label>
-      <input type="text" class="form-control" placeholder="Tarea">
+      <input type="text" class="form-control" placeholder="Tarea" formControlName="title">
     </div>
     <div class="form-group">
       <label>Asignado a:</label>
@@ -15,7 +15,7 @@
     </div>
     <div class="form-group">
       <div class="input-group">
-        <input class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #d="ngbDatepicker">
+        <input class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #d="ngbDatepicker" formControlName="date">
         <div class="input-group-append">
           <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
             <i class="fas fa-calendar-alt"></i>
@@ -25,13 +25,13 @@
     </div>
     <div class="form-group">
       <label for="description">Descripción</label>
-      <textarea class="form-control" name="description" id="description" cols="30" rows="5"></textarea>
+      <textarea formControlName="description" class="form-control" name="description" id="description" cols="30" rows="5"></textarea>
     </div>
     <div class="form-group">
       <label for="labels">Etiquetas</label>
       <input type="text" class="form-control" placeholder="Etiquetas">
     </div>
-    <button class="btn btn-primary">
+    <button type="submit" class="btn btn-primary {{ taskForm.status == 'INVALID' ? 'disabled' : ''}}">
       Crear tarea
     </button>
   </form>
