--- a/src/app/components/create-task/create-task.component.html
+++ b/src/app/components/create-task/create-task.component.html
@@ -1,8 +1,8 @@
 <section class="container">
   <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="title" class="font-weight-bold text-primary">Titulo de la tarea</label>
-      <input type="text" class="form-control" placeholder="Tarea" formControlName="title">
+      <label for="name" class="font-weight-bold text-primary">Titulo de la tarea</label>
+      <input type="text" class="form-control" placeholder="Tarea" formControlName="name">
     </div>
     <div class="form-group">
       <label>Asignado a:</label>
@@ -15,7 +15,7 @@
     </div>
     <div class="form-group">
       <div class="input-group">
-        <input class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #d="ngbDatepicker" formControlName="date">
+        <input class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #d="ngbDatepicker" formControlName="deadline">
         <div class="input-group-append">
           <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
             <i class="fas fa-calendar-alt"></i>
