--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
       <img src="assets/logo.jpg" height="100px">
     </div>
     <div class="list-group list-group-flush">
-      <button class="btn btn-outline-primary btn-sm mx-2 shadow-sm">
+      <button class="btn btn-outline-primary btn-sm mx-2 shadow-sm" (click)="navigateTo('tasks/create')">
         <i class="fas fa-plus"></i>
         Crear nueva tarea
       </button>
