--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -49,7 +49,7 @@
   </div>
   <!-- Navbar -->
   <div id="page-content-wrapper">
-    <nav class="navbar navbar-light navbar-white navbar-expand-lg shadow-sm">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg shadow-sm">
       <div class="toggle-btn" style="margin-top: 7px;" onclick="show()">
         <span style="margin-top: 10px;"></span>
         <span></span>
