--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -13,7 +13,7 @@ body {
 }
 
 .sidebar-cont {
-    background-color: $light;
+    background-color: $sidenav-background-color;
     z-index: 200;
 }
 
