--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,4 @@
-$primary: #319795;
-$secondary: #3182CE;
-$green: #38A169;
-$dark: #0F2026;
+@import './theme.scss';
 
 /* You can add global styles to this file, and also import other style files */
 @import
