--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,3 +1,5 @@
-<p>
-  index works!
-</p>
+<h1 class="display-2 text-primary font-weight-bold text-center mt-5">
+  Hola, suerte trabajando!
+</h1>
+<app-list-tasks></app-list-tasks>
+
