--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
         <i class="fas fa-plus"></i>
         Crear nueva tarea
       </button>
-      <button class="btn btn-outline-primary btn-sm mx-2 shadow-sm">
+      <button class="btn btn-outline-primary btn-sm mx-2 shadow-sm" (click)="navigateTo('tasks')">
         <i class="fas fa-tasks"></i>
         Tareas
       </button>
