--- a/src/app/components/create-task/create-task.component.scss
+++ b/src/app/components/create-task/create-task.component.scss
@@ -3,7 +3,7 @@
 .container {
   background-color: white;
   padding: 30px;
-  margin: 20px;
+  // margin: 20px;
   border-radius: 10px;
   text-align: left;
 }
