--- a/src/app/components/list-tasks/list-tasks.component.html
+++ b/src/app/components/list-tasks/list-tasks.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <h4 class="text-primary font-weight-bold pt-4">Tareas</h4>
   <div class="list-group list-group-flush">
-    <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      *ngFor="let task of tasks">
+    <a  (click)='getID(task._id)'  class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      *ngFor="let task of tasks" [routerLink]="['/tasks/edit', task._id]">
       {{task.name}}
       <span class="badge badge-primary badge-pill">
         {{task.deadline | date:"EEEE, dd/MM"}}
