--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -72,7 +72,7 @@
             <a class="nav-link" href="#">Opciones</a>
           </li>
           <li class="nav-item dropdown" ngbDropdown>
-            <a class="nav-link dropdown-toggle" id="id01" href="#" ngbDropdownToggle>Configuracion de la cuenta</a>
+            <a class="nav-link dropdown-toggle" id="id01"  ngbDropdownToggle>Configuracion de la cuenta</a>
             <div class="dropdown-menu" aria-labelledby="id01" ngbDropdownMenu>
               <a class="dropdown-item" href="#"><i class='fas fa-edit'></i> Edit</a>
               <a class="dropdown-item" href="#"><i class='fas fa-code-branch'></i> Configuration</a>
