--- a/src/app/components/list-tasks/list-tasks.component.html
+++ b/src/app/components/list-tasks/list-tasks.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h4 class="text-primary font-weight-bold pt-4">Tareas</h4>
+  <h2 class="text-primary font-weight-bold pt-4 animated fadeInDown delay-0.7s">Tareas</h2>
   <div class="list-group list-group-flush">
     <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
       *ngFor="let task of tasks">
