--- a/src/app/components/create-task/create-task.component.html
+++ b/src/app/components/create-task/create-task.component.html
@@ -30,7 +30,7 @@
     </div>
     <div class="form-group">
       <label for="labels">Etiquetas</label>
-      <input type="text" class="form-control" placeholder="Etiquetas">
+      <input type="text" class="form-control" formControlName="labels" placeholder="Etiquetas">
     </div>
     <button type="submit" class="btn btn-primary {{ taskForm.status == 'INVALID' ? 'disabled' : ''}}">
       Crear tarea
