--- a/src/app/components/edit-task/edit-task.component.html
+++ b/src/app/components/edit-task/edit-task.component.html
@@ -32,10 +32,10 @@
       <label for="labels">Etiquetas</label>
       <input type="text" class="form-control" value="{{task.labels}}" placeholder="Etiquetas">
     </div>
-    <button type="submit" class="btn btn-primary {{ taskForm.status == 'INVALID' ? 'disabled' : ''}}">
+    <button type="submit" class="btn btn-primary">
       Actualizar tarea
     </button>
-    <button type="submit" class="btn btn-danger btn-delete">
+    <button type="button" (click)="eliminar()" class="btn btn-danger btn-delete">
       Eliminar tarea
     </button>
   </form>
