--- a/src/app/components/edit-task/edit-task.component.html
+++ b/src/app/components/edit-task/edit-task.component.html
@@ -35,7 +35,7 @@
     <button type="submit" class="btn btn-primary">
       Actualizar tarea
     </button>
-    <button type="button" (click)="eliminar()" class="btn btn-danger btn-delete">
+    <button type="button" (click)="openConfirmationDialog()" class="btn btn-danger btn-delete">
       Eliminar tarea
     </button>
   </form>
