--- a/src/app/components/edit-task/edit-task.component.html
+++ b/src/app/components/edit-task/edit-task.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
       <div class="input-group">
-        <input class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #d="ngbDatepicker" formControlName="deadline" value="{{task.deadline | date:'yyyy-mm-dd'}}">
+        <input class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #d="ngbDatepicker" formControlName="deadline" value="{{task.deadline | date:'yyyy-MM-dd'}}">
         <div class="input-group-append">
           <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
             <i class="fas fa-calendar-alt"></i>
@@ -35,7 +35,7 @@
     <button type="submit" class="btn btn-primary {{ taskForm.status == 'INVALID' ? 'disabled' : ''}}">
       Actualizar tarea
     </button>
-    <button type="submit" class="btn btn-danger btn-delete">
+    <button (click)="delete()" class="btn btn-danger btn-delete">
       Eliminar tarea
     </button>
   </form>
