--- a/src/app/components/create-task/create-task.component.html
+++ b/src/app/components/create-task/create-task.component.html
@@ -5,7 +5,7 @@
       <label for="name" class="font-weight-bold text-primary">Titulo de la tarea</label>
       <input type="text" class="form-control" placeholder="Tarea" formControlName="name">
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
       <label>Asignado a:</label>
       <div class="md-chips">
         <div class="md-chip md-chip-hover">
@@ -13,7 +13,7 @@
           <div class="md-chip-icon">FH</div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="form-group">
       <div class="input-group">
         <input class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #d="ngbDatepicker" formControlName="deadline">
