Frontend con equipo de 1

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -72,11 +72,12 @@
             <a class="nav-link" href="#">Opciones</a>
           </li>
           <li class="nav-item dropdown" ngbDropdown>
-            <a class="nav-link dropdown-toggle" id="id01" href="#" ngbDropdownToggle>Configuracion de la cuenta</a>
+            <a class="nav-link dropdown-toggle" id="id01" ngbDropdownToggle>Configuracion de la cuenta</a>
             <div class="dropdown-menu" aria-labelledby="id01" ngbDropdownMenu>
-              <a class="dropdown-item" href="#"><i class='fas fa-edit'></i> Edit</a>
-              <a class="dropdown-item" href="#"><i class='fas fa-code-branch'></i> Configuration</a>
-              <a class="dropdown-item" href="#"><i class='fas fa-sign-out-alt'></i> Log out</a>
+              <a class="dropdown-item"><i class='fas fa-edit'></i> Edit</a>
+              <a class="dropdown-item"><i class='fas fa-code-branch'></i> Configuration</a>
+              <a (click)="logout()" class="dropdown-item" ><i class='fas fa-sign-out-alt'></i>Log out</a>
+              <a (click)="registro()" class="dropdown-item" ><i class='fas fa-sign-out-alt'></i>Registrarse</a>
             </div>
           </li>
         </ul>
